...
        <View
          style={[styles.modalContent, { backgroundColor: colors.card }]}
          testID="currency-modal-content"
        >
          <View style={styles.header}>
            <CustomText variant="h4" fontWeight="bold" style={{ color: colors.text }}>
              Select Currency
            </CustomText>
            <TouchableOpacity onPress={handleClose} hitSlop={10} testID="currency-modal-close">
              <Ionicons name="close" size={Spacing.iconSize} color={colors.text} />
            </TouchableOpacity>
          </View>

          <View
            style={[
...
